testdata/invalid/invalid_op_code_13.bop
[opcode("8910")]
union InvalidOpCode13A {}

[opcode("8910")]
union InvalidOpCode13B {}
